--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Start Vegan Image -->
 
     <section id="vegan-outer">
-        <div id="vegan-image"></div>
+        <div id="vegan-images"></div>
         <div id="cover-text">
             <h2>Vegan is just pure love. Love for animals, love for the planet, and love for yourself.</h2>
         </div>
@@ -225,10 +225,14 @@
                         <h3>Famous Vegetarians and Vegans</h3>
                         <hr>
                         <p>
-                            Numerous influential historical figures and contemporary celebrities have embraced veganism or vegetarianism, reflecting a diverse range of motivations. 
+                            Numerous influential historical figures like Pythagoras,
+                            Nicolas Tesla, Sir Isaac Newton, Leonardo da Vinci, Albert Einstein, Benjamin Franklin,
+                            Plato, Thomas Edison, Srinivāsa Aiyangār Rāmānujan, Rupert Sheldrake, Edward Witten,
+                            Gandhi, Vincent Van Gogh, Mark Twain, Franz Kafka, Martin Luther King Jr., Leon Tolstoy,
+                            Steve Jobs and contemporary celebrities have embraced veganism or vegetarianism, reflecting a diverse range of motivations. 
                         </p>
                         <ol>
-                            <li>Vegans also from avoid attending events involving animal exploitation for human entertainment, such as zoos, animal circuses, bullfighting, cockfighting, and animal-drawn vehicles. </li>
+                            <li>Vegans also avoid attending events involving animal exploitation for human entertainment, such as zoos, animal circuses, bullfighting, cockfighting, and animal-drawn vehicles. </li>
                             <li>In contemporary times, public figures like Bill Clinton, Carl Lewis, Ozzy Osbourne, and Mike Tyson shifted towards vegan or almost-vegan diets for health reasons.</li>
                             <li>Personalities such as Ellen DeGeneres, Alicia Silverstone, and Dennis Kucinich adopted veganism after being moved by the documentary "Earthlings" shedding light on the suffering of animals in various industries.</li>
                             <li>Hollywood celebrities, including Miley Cyrus, Ariana Grande, Stella McCartney, Diane Keaton, Michelle Pfeiffer, Joaquin Phoenix, and Paul McCartney, have embraced vegan lifestyles, contributing to the growing awareness of ethical and health considerations associated with plant-based living.</li>
@@ -258,7 +262,7 @@
     <section id="form-outer">
         <div id="form-nav-target" class="spacing-under-nav"></div>
         <video autoplay muted loop>
-            <source src="" type="video/mp4">
+            <source src="assets/images/video.mp4" type="video/mp4">
         </video>
         <form id=contribute-form method="post" action="https://formdump.codeinstitute.net/" target="blank">
             <h3>Contribute Your Vegan Life</h3>
