Added veganF image.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
             <div>
                 <a href="#famous-target">
-                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
+                <img src="assets/images/veganF.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h3>
                 </a>    
                     <a href="#famous-target">Famous Veg</a>
