Added vegan life favicon to html.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="vegan, definition, motivation, priciple, practice, information">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    
+    <link rel="icon" type="image/x-icon" href="assets/images/VLiconGreen.png">
     <title>Vegan life</title>
 </head>
 
@@ -87,7 +87,7 @@
         <div id="info-links">
             <div>
                 <a href="#motivation-target">
-                <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
+                    <img src="assets/images/veganlife1.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 </a>    
                 <h3>
                     <a href="#motivation-target">Motivation</a>
@@ -96,8 +96,8 @@
             <div>
                 <a href="#principles-target"">
                 <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="vegan-images">
-                <h3>
                 </a>
+                <h3>
                     <a href="#principles-target">Principles</a>
                 </h3>
             </div>
