try to fix image logo.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="vegan-outer">
         <div id="vegan-images"></div>
         <div id="cover-text">
-            <h2>Hola</h2>
+            <h2>Vegan is just pure love. Love for animals, love for the planet, and love for yourself.</h2>
         </div>
     </section>
 
