fixed some error in index.html file.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </h3>
             </div>
             <div>
-                <a href="#principles-target"">
+                <a href="#principles-target">
                 <img src="assets/images/principles.png" alt="vegan life with white background and green write" class="vegan-images">
                 </a>
                 <h3>
@@ -103,7 +103,7 @@
             </div>
             <div>
                 <a href="#practice-target">
-                <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="vegan-images">
+                    <img src="assets/images/vegetarianismo.jpg" alt="vegan life with white background and green write" class="vegan-images">
                 <h3>
                 </a>    
                     <a href="#practice-target">Practice</a>
