Fixed error line 300 index html.

--- a/index.html
+++ b/index.html
@@ -297,8 +297,7 @@
                     aria-label="Visit our Instagram page (opens in new tab)"><i class="fab fa-instagram-square"></i></a>
             </li>
             <li>
-                <a <a href="https://twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens in new tab)"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in new tab)"><i class="fab fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://www.youtube.com/" target="blank" rel="noopener"
