--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div id="map-target" class="spacing-under-nav"></div>
     <div id="map-inner">
             <h2>Find a Vegan Life Place Near You</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19054.859447005085!2d-6.268731998762189!3d53.34580825468117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1svegan%20restaurant!5e0!3m2!1sen!2sie!4v1639515875102!5m2!1sen!2sie" width="100" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d77731.11877822236!2d-3.225128041006864!3d51.48158301025882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1svegan%20restaurant!5e0!3m2!1sen!2suk!4v1639515875102!5m2!1sen!2suk" width="100" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
 
